fixed pre overflow bug

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -94,6 +94,7 @@ pre {
     font-family: monospace;
     border-radius:4px;
     border: 1px dashed black;
+    white-space: pre-wrap;
 
 }
 
